--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "axios": "^1.4.0",
+    "isomorphic-fetch": "^3.0.0",
     "next": "13.4.12",
     "node-fetch": "^3.3.2",
     "react": "18.2.0",
